--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,12 @@ body {
     padding: 20px;
 }
 
+.hero-image-wrapper,
+.header-container {
+    flex: 1; /* Ensures each takes up 50% of the space */
+    max-width: 50%;
+}
+
 .hero-image {
     display: none;
 }
@@ -25,7 +31,7 @@ body {
     .hero-image {
         display: block;
         margin-right: 20px;
-        width: 400px; /* Adjust as needed */
+        width: 100%; /* Adjust as needed to fill its container */
     }
 }
 
@@ -45,12 +51,6 @@ header img {
     height: auto;
 }
 
-@media (max-width: 768px) {
-    header img {
-        width: 180px; /* Smaller logo on smaller screens */
-    }
-}
-
 header .header-container {
     display: flex;
     flex-direction: column;
@@ -65,15 +65,8 @@ header .header-container .main-subtitle {
     margin-right: 50px; /* Add right margin */
 }
 
-@media (max-width: 768px) {
-    header .header-container .main-title,
-    header .header-container .main-subtitle {
-        margin-right: 30px; /* Adjusted right margin for smaller screens */
-    }
-}
-
 header .main-title {
-    font-size: 48px; /* Large screen size font */
+    font-size: 48px;
     font-weight: 300;
     font-style: italic;
     color: rgb(108, 108, 238);
@@ -84,16 +77,6 @@ header .main-subtitle {
     font-size: 29px;
     font-weight: 300;
     margin: 0 0 1.5rem;
-}
-
-@media (max-width: 768px) {
-    header .main-title {
-        font-size: 24px; /* Smaller screen size font */
-    }
-
-    header .main-subtitle {
-        font-size: 18px;
-    }
 }
 
 header .app-store-button img {
@@ -150,6 +133,21 @@ footer a {
 
 /* Media Queries */
 @media (max-width: 768px) {
+    .hero-image-wrapper,
+    .header-container {
+        max-width: 100%; /* Stack vertically on smaller screens */
+    }
+
+    header img {
+        width: 180px; /* Smaller logo */
+    }
+
+    header .header-container .main-title,
+    header .header-container .main-subtitle {
+        font-size: 24px;
+        margin-right: 30px; /* Smaller right margin */
+    }
+
     .feature-section {
         flex-direction: column;
         text-align: center;
